--- a/Diagnosis.App/Controls/Search/Tag.xaml
+++ b/Diagnosis.App/Controls/Search/Tag.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+             xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
              xmlns:auto="clr-namespace:Diagnosis.ViewModels.Search.Autocomplete;assembly=Diagnosis.Viewmodels"
              xmlns:dd="clr-namespace:GongSolutions.Wpf.DragDrop;assembly=GongSolutions.Wpf.DragDrop"
              mc:Ignorable="d"
@@ -42,7 +43,7 @@
             <ContentPresenter Content="{StaticResource line}" Margin="2,0,0,0" />
         </StackPanel>
         <TextBox x:Name="query" 
-                 controls:FocusExtension.IsFocused="{Binding IsTextBoxFocused, Mode=TwoWay}"
+                 beh:FocusExtension.IsFocused="{Binding IsTextBoxFocused, Mode=TwoWay}"
                  dd:DragDrop.IsDropTarget="True"
                  dd:DragDrop.DropHandler="{Binding}"
                  Text="{Binding Query, UpdateSourceTrigger=PropertyChanged}"
@@ -104,7 +105,7 @@
                                x:Shared="False">
                             <Setter Property="IsCheckable"
                                     Value="True" />
-                            <Setter Property="controls:MenuItemExtensions.GroupName"
+                            <Setter Property="beh:MenuItemExtensions.GroupName"
                                     Value="{Binding Hash}" />
                             <Setter Property="Command"
                                     Value="{Binding ConvertToCommand}" />
