--- a/Diagnosis.App/Controls/Search/SearchTree.xaml
+++ b/Diagnosis.App/Controls/Search/SearchTree.xaml
@@ -3,13 +3,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+             xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
              x:Class="Diagnosis.App.Controls.Search.SearchTree"
              mc:Ignorable="d"
              d:DesignHeight="200"
              d:DesignWidth="300"
              x:Name="searchTree"
              GotFocus="UserControl_GotFocus"
-             controls:EnhancedFocusScope.IsEnhancedFocusScope="True"
+             beh:EnhancedFocusScope.IsEnhancedFocusScope="True"
              LostFocus="UserControl_LostFocus">
     <!--PopupSearch<>-->
     <UserControl.Resources>
@@ -28,7 +29,7 @@
 
             <TextBox x:Name="input"
                      Text="{Binding Filter.Query, UpdateSourceTrigger=PropertyChanged}"
-                     controls:FocusExtension.IsFocused="{Binding Filter.IsFocused, Mode=TwoWay}"
+                     beh:FocusExtension.IsFocused="{Binding Filter.IsFocused, Mode=TwoWay}"
                      PreviewKeyDown="input_PreviewKeyDown"
                      GotMouseCapture="input_GotMouseCapture">
                 <controls:WatermarkService.Watermark>
