--- a/Diagnosis.App/Screens/Doctors.xaml
+++ b/Diagnosis.App/Screens/Doctors.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
              xmlns:search="clr-namespace:Diagnosis.App.Controls.Search"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              mc:Ignorable="d"
@@ -92,7 +93,7 @@
             </DataGrid.InputBindings>
             <DataGrid.RowStyle>
                 <Style TargetType="DataGridRow">
-                    <Setter Property="controls:RowDblClick.DoubleClickCommand"
+                    <Setter Property="beh:RowDblClick.DoubleClickCommand"
                             Value="{Binding ElementName=dataGrid, Path=DataContext.EditCommand}" />
                     <Setter Property="Tag"
                             Value="{Binding DataContext, ElementName=dataGrid}" />
