--- a/Diagnosis.App/Screens/Search.xaml
+++ b/Diagnosis.App/Screens/Search.xaml
@@ -8,6 +8,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
              x:Name="search"
              mc:Ignorable="d"
              d:DesignHeight="400"
@@ -203,7 +204,7 @@
                        BasedOn="{StaticResource TreeViewItemStyle}">
                     <Setter Property="Template"
                             Value="{StaticResource treeViewItemControl}" />
-                    <Setter Property="controls:Attached.InputBindings"
+                    <Setter Property="beh:Attached.InputBindings"
                             Value="{StaticResource SearchResultInputBindings}" />
                 </Style>
             </controls:FullTree.ItemContainerStyle>
