--- a/Diagnosis.App/Windows/AppointmentEditorWindow.xaml
+++ b/Diagnosis.App/Windows/AppointmentEditorWindow.xaml
@@ -2,10 +2,11 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+        xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
         xmlns:ex="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
         Title="{Binding Title}" Height="170" Width="250"         
-        controls:DialogCloser.DialogResult="{Binding DialogResult}"        
-        controls:FocusBehavior.FocusFirst="True"
+        beh:DialogCloser.DialogResult="{Binding DialogResult}"        
+        beh:FocusBehavior.FocusFirst="True"
         ShowInTaskbar="False" ResizeMode="NoResize" WindowStyle="ToolWindow"  >
     <Grid Margin="0,0,10,10">
         <Grid.RowDefinitions>
