--- a/Diagnosis.App/Windows/CourseEditorWindow.xaml
+++ b/Diagnosis.App/Windows/CourseEditorWindow.xaml
@@ -1,11 +1,12 @@
 ﻿<Window x:Class="Diagnosis.App.Windows.CourseEditorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:controls="clr-namespace:Diagnosis.App.Controls"  
+        xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+        xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
         Title="{Binding Title}" 
         Height="170" Width="250"
-        controls:DialogCloser.DialogResult="{Binding DialogResult}"
-        controls:FocusBehavior.FocusFirst="True"
+        beh:DialogCloser.DialogResult="{Binding DialogResult}"
+        beh:FocusBehavior.FocusFirst="True"
         ShowInTaskbar="False" ResizeMode="NoResize" WindowStyle="ToolWindow"  >
     <Grid Margin="0,0,10,10">
         <Grid.RowDefinitions>
