--- a/Diagnosis.App/Windows/IcdSelectorWindow.xaml
+++ b/Diagnosis.App/Windows/IcdSelectorWindow.xaml
@@ -2,12 +2,13 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+        xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
         xmlns:search="clr-namespace:Diagnosis.App.Controls.Search"
         Title="{Binding Title}"
         Height="400"
         Width="500"
-        controls:DialogCloser.DialogResult="{Binding DialogResult}"
-        controls:FocusBehavior.FocusFirst="True"
+        beh:DialogCloser.DialogResult="{Binding DialogResult}"
+        beh:FocusBehavior.FocusFirst="True"
         ShowInTaskbar="False"
         ResizeMode="CanResize"
         WindowStyle="ToolWindow">
