--- a/Diagnosis.App/Windows/MeasureEditorWindow.xaml
+++ b/Diagnosis.App/Windows/MeasureEditorWindow.xaml
@@ -4,12 +4,13 @@
         xmlns:controls="clr-namespace:Diagnosis.App.Controls"
         xmlns:search="clr-namespace:Diagnosis.App.Controls.Search"
         xmlns:ex="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
+        xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
         Title="{Binding Title}"
         Height="150"
         Width="400"
         MinWidth="200"
-        controls:DialogCloser.DialogResult="{Binding DialogResult}"
-        controls:FocusBehavior.FocusFirst="True"
+        beh:DialogCloser.DialogResult="{Binding DialogResult}"
+        beh:FocusBehavior.FocusFirst="True"
         ShowInTaskbar="False"
         WindowStyle="ToolWindow">
     <Grid Margin="0,0,10,10">
