--- a/Diagnosis.App/Windows/PatientEditorWindow.xaml
+++ b/Diagnosis.App/Windows/PatientEditorWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:controls="clr-namespace:Diagnosis.App.Controls"
         xmlns:beh="clr-namespace:Diagnosis.App.Behaviors"
         xmlns:card="clr-namespace:Diagnosis.App.Controls.CardParts"
-        xmlns:screen="clr-namespace:Diagnosis.ViewModels.Screens;assembly=Diagnosis.ViewModels"
+        xmlns:diag="http://schemas.smg.com/diagnosis"
         Title="{Binding Title}"
         Height="350" Width="500"
         beh:DialogCloser.DialogResult="{Binding DialogResult}"
@@ -17,7 +17,7 @@
         d:DataContext="{DynamicResource vm}">
     <!--PatientViewModel-->
     <Window.Resources>
-        <screen:PatientEditorViewModel x:Key="vm" />
+        <diag:PatientEditorViewModel x:Key="vm" />
 
         <Style TargetType="DockPanel" BasedOn="{StaticResource formLine}" />
         <Style TargetType="Label" BasedOn="{StaticResource label120}" />
